testsuite/tests/typecheck/should_fail/tcfail123.stderr

tcfail123.hs:11:9: error:
    • Couldn't match a lifted type with an unlifted type
      When matching the kind of ‘GHC.Prim.Int#’
    • In the first argument of ‘f’, namely ‘3#’
      In the expression: f 3#
      In an equation for ‘h’: h v = f 3#
